Remove Python keyword escapement in Repository.find_by_name

Strip trailing underscore from module level items before
calling g_irepository_find_by_name. This fixes a problem
with GI module level items having the same name as a Python
keyword raising an AttributeError during access (Pango.break_).

https://bugzilla.gnome.org/show_bug.cgi?id=697363